syntax = "proto3";

option java_package = "pers.xds.wtuapp.im.proto";
option java_outer_classname = "ChatRequestMessageProto";
option optimize_for = SPEED;

message ChatRequestMessage {
  // 发给谁
  int32 to = 1;
  // 消息内容
  string content = 2;
}
